# cpp_sandbox

./: .gitignore  CMakeLists.txt
projects/01_multifile/: CMakeLists.txt  input.cpp  main.cpp
projects/02_headers/: CMakeLists.txt  main.cpp
projects/03_sphere/: CMakeLists.txt  main.cpp  sphereUtils.cpp  sphereUtils.h
projects/04_kinematics/: CMakeLists.txt  constants.h  energy.cpp  energy.h  freefall.cpp  freefall.h  main.cpp
projects/05_chars/: CMakeLists.txt  main.cpp
projects/06_calculator/: CMakeLists.txt  arithmetic.cpp  main.cpp
projects/07_gravity/: CMakeLists.txt  kinematics.cpp  kinematics.h  main.cpp
projects/08_binary/: CMakeLists.txt  main.cpp
projects/09_string/: CMakeLists.txt  main.cpp
projects/10_string_view/: CMakeLists.txt  main.cpp
projects/11_lambda_thread/: CMakeLists.txt  main.cpp
projects/_tests/bullshit/: CMakeLists.txt  main.cpp
projects/_tests/datatype_sizes/: CMakeLists.txt  main.cpp
projects/_tests/file_ops/: CMakeLists.txt  main.cpp  squares.txt
projects/_tests/int_sizes/: CMakeLists.txt  main.cpp
projects/template/: CMakeLists.txt  main.cpp
